--- a/static/assets/css/split.css
+++ b/static/assets/css/split.css
@@ -108,7 +108,7 @@ a:hover {
   }
 }
 html {
-  background-color: #061C30;
+  background-color: #2B2B2B;
 }
 
 body.page-template-page-fullsingle-split {
