--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,4 +1,3 @@
 <div class="split-intro">
-  {{ with .Title }}<h1>{{ . }}</h1>{{ end }}
-  {{ with .Params.tagline }}<span class="tagline">{{ . }}</span>{{ end }}
+  {{ with .Params.tagline }}<h1><span class="tagline">{{ . }}</span></h1>{{ end }}
 </div>
