--- a/static/assets/sass/01-content.scss
+++ b/static/assets/sass/01-content.scss
@@ -45,6 +45,7 @@ html {
 body.page-template-page-fullsingle-split {
   background-color: $color-background;
   font-family: 'Montserrat', sans-serif;
+  font-display: swap;
   font-weight: 400;
   font-size: 21px;
   line-height: 33px;
@@ -168,6 +169,7 @@ body.page-template-page-fullsingle-split {
 .split-bio {
   padding: 40px 0 20px 0;
   font-family: 'Lora', serif;
+  font-display: swap;
 
   @media (max-width: $bp-smallish ) {
     padding: 30px 0 10px 0;
